--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,26 @@
+# System
 .DS_Store
+*.log
+*.tmp
+
+# Dependencies
+node_modules/
+.pnpm-store/
+
+# Build outputs
+dist/
+*.tsbuildinfo
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Test coverage
+coverage/
+
+# Environment
+.env
+.env.local
+.env.*.local
