chore: rename package to @khanglvm/mcpm

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "mcpm",
+    "name": "@khanglvm/mcpm",
     "version": "0.1.0",
     "description": "MCP Manager - Centralized MCP server configuration for AI agents",
     "type": "module",
